[package]
name = "link-shortener-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.203", features = ["derive"] }
rand = "0.8.5"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
once_cell = "1.19.0"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
