[package]
name = "link-shortener-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.203", features = ["derive"] }
rand = "0.8.5"
once_cell = "1.19.0"
actix-cors = "0.7.0"
serde_json = "1.0.118"
mime = "0.3.17"
jsonwebtoken = "9.3.0"

[dependencies.mongodb]
version = "3.1.0"
